fixed the size of the menu buttons on mobile

--- a/restaurant site/css/styles.css
+++ b/restaurant site/css/styles.css
@@ -134,7 +134,14 @@ body {
 }
 
 
+#collapsable-nav a {
+	font-size: 1.2em;
+}
 
+#collapsable-nav a span {
+	font-size: 1em;
+	margin-right: 5px;
+}
 
 
 
